force-app/main/default/objects/CampoIntegracao__mdt/CampoIntegracao__mdt.object-meta.xml
<CustomObject>
    <description>Campos utilizados em integrações com chave -&gt; valor e sua respectiva Integração</description>
    <label>Campo para integração</label>
    <pluralLabel>Campos para integração</pluralLabel>
</CustomObject>