force-app/main/default/objects/CampoIntegracao__mdt/fields/Campo__c.field-meta.xml
<CustomField>
    <fullName>Campo__c</fullName>
    <description>Campo no xml a ser integrado, caso haja um ponto dividindo as palavras indica &quot;pai&quot;.&quot;campo&quot;</description>
    <inlineHelpText>Campo no xml a ser integrado, caso haja um ponto dividindo as palavras indica &quot;pai&quot;.&quot;campo&quot;</inlineHelpText>
    <label>Campo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>