force-app/main/default/objects/CampoIntegracao__mdt/fields/Integracao__c.field-meta.xml
<CustomField>
    <fullName>Integracao__c</fullName>
    <description>Integração ao qual o campo pertence</description>
    <inlineHelpText>Integração ao qual o campo pertence</inlineHelpText>
    <label>Integração</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>