force-app/main/default/objects/CampoIntegracao__mdt/fields/Metodo__c.field-meta.xml
<CustomField>
    <fullName>Metodo__c</fullName>
    <description>Método da integração ao qual o campo pertence</description>
    <inlineHelpText>Método da integração ao qual o campo pertence</inlineHelpText>
    <label>Método</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>