force-app/main/default/objects/CampoIntegracao__mdt/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <description>Valor do campo a ser integrado</description>
    <inlineHelpText>Valor do campo a ser integrado</inlineHelpText>
    <label>Valor</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>